# hako

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.sh  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.hako/containers/hako/: WORKING
.hako/containers/hako/refs/heads/: main
docs/: distributed.md  kata-ifc.md  push-to-deploy.md  runtime-isolation.md
hako-cli/: Cargo.toml  build.rs
hako-cli/src/: args.rs  diag.rs  helpers.rs  main.rs
hako-cli/src/cmd/: apply.rs  bundle.rs  files.rs  identity.rs  maintenance.rs  mod.rs  mount.rs  nav.rs  oci.rs  peers.rs  proc_meta.rs  runtime.rs  serve.rs  sync.rs  vc.rs
hako-cli/src/cmd/serve/: channel.rs  client.rs  deploy.rs  proto.rs  server.rs
hako-cli/src/host_bridge/: bootstrap_lima.rs  bootstrap_wsl.rs  mod.rs
hako-cli/tests/: cli.rs
hako-core/: Cargo.toml
hako-core/src/: config.rs  fuse.rs  hash.rs  io_util.rs  lib.rs  maintenance.rs  repo.rs  state.rs
hako-core/src/fs/: entry.rs  mod.rs  scoped.rs
hako-core/src/oci/: layers.rs  mod.rs  reference.rs  registry.rs
hako-core/src/rootfs/: README.md  mod.rs
hako-core/src/store/: fs.rs  mem.rs  mod.rs
hako-core/src/tree/: cursor.rs  diff.rs  merge.rs  mod.rs  node.rs  ops.rs  set_ops.rs  types.rs
hako-core/tests/: end_to_end.rs
hako-runtime/: Cargo.toml
hako-runtime/src/: cgroup.rs  instances.rs  lib.rs  proc.rs  transform.rs
scripts/: isolation-check.sh
xtask/: Cargo.toml
xtask/src/: main.rs
