[package]
name = "hako-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for hako (the binary that ships as `hako`)"
build = "build.rs"

[[bin]]
name = "hako"
path = "src/main.rs"

[dependencies]
hako = { path = "../hako-core" }
hako-runtime = { path = "../hako-runtime" }
clap = { version = "4", features = ["derive"] }
# Used by host_bridge::bootstrap_wsl to write the minimal rootfs.tar
# imported via `wsl --import` when auto-bootstrapping the runtime distro.
tar = "0.4"
# Used by `hako bundle` to pack/unpack the self-contained bundle payload
# (the pruned container store) that is appended to the hako binary.
flate2 = "1"
# Used by host_bridge::bootstrap_lima to stage the embedded Linux binary
# in $TMP before `limactl copy` ships it into the VM. RAII cleanup so a
# crash mid-copy doesn't leak a ~10 MiB file in /tmp.
tempfile = "3"
# Cluster node identity (Phase 1): an Ed25519 keypair is the node's stable id.
# Optional — only the `cluster` feature pulls in the crypto stack, so the
# single-node FS/dev build carries no crypto/transport weight.
ed25519-dalek = { version = "2", optional = true }
getrandom = { version = "0.2", optional = true }

[features]
default = []
# The distributed/cluster surface (Phase 1+): node identity and static peers
# now, the `serve` daemon + wire protocol later. Gated so the base binary
# stays lean — see docs/distributed.md.
cluster = ["dep:ed25519-dalek", "dep:getrandom"]
# Embeds a pre-built Linux hako binary into the host (Windows/macOS)
# wrapper, so `hako apply` etc. can auto-bootstrap a WSL distro / Lima
# VM without requiring the user to install hako separately inside.
#
# The Linux binary must exist at `../vendored/hako-linux-<arch>` before
# building with this feature; produce it via `cargo xtask build-linux`
# (which cross-compiles hako-cli for the linux-musl target).
#
# `cargo build` without this feature ships the host binary with an
# empty embedded blob; `host_bridge` falls back to expecting hako on
# PATH inside the user's WSL/Lima env. That's the dev-loop default.
embedded = []
