[package]
name = "hako"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-addressed container runtime with version-controlled filesystems"

[lib]
name = "hako"
path = "src/lib.rs"

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
tar = "0.4"
flate2 = "1"
# zstd-compressed OCI layers (increasingly common). `ruzstd` is a pure-Rust
# *decoder* — we only ever decompress layers — so it keeps the "no C deps"
# property that lets the runtime cross-compile to a static musl binary.
ruzstd = "0.7"
# OCI registries serve blob/manifest digests as SHA-256. Hako uses blake3
# internally, so we need sha2 for verification on the wire only.
sha2 = "0.10"
# Cross-platform file locks (flock on Unix, LockFileEx on Windows). Used to
# guard read-modify-write sequences (commit, branch, etc.) so concurrent CLI
# invocations don't clobber each other.
fs2 = "0.4"
# hako.toml parsing — declarative project config (image, setup, run, etc.).
toml = { version = "0.8", default-features = false, features = ["parse"] }

# FUSE/runtime support is Linux-only. macOS/Windows hosts bridge runtime
# commands into a Linux VM (Lima / WSL2) rather than mounting locally, so we
# don't pull fuser (which would need macFUSE on macOS) on those targets.
# default-features = false drops the libfuse C dependency: hako mounts via
# direct mount(2) inside its user namespace (it already avoids the fusermount3
# helper), so libfuse isn't needed at runtime — and dropping it lets the runtime
# cross-compile to a static musl binary for the release.
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15", default-features = false }
libc = "0.2"
# hako-core is the storage / VC / OCI library. The user-facing binary lives
# in hako-cli (which depends on this crate plus hako-runtime). The split
# avoids a cyclic dependency: hako-runtime needs hako-core's types (Repo,
# ChunkStore, FsStore, Hash), and hako-cli needs both.

[dev-dependencies]
tempfile = "3"
# Test-only: the C-backed reference zstd, used to *compress* fixtures so we can
# verify our pure-Rust `ruzstd` decoder against real zstd frames. Never in a
# release build (dev-deps are excluded), so the musl embedded build is unaffected.
zstd = "0.13"
