[package]
name = "hako-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Container transformation runtime for hako (hako is / hako as / hako run)"

[lib]
name = "hako_runtime"
path = "src/lib.rs"

[dependencies]
hako = { path = "../hako-core" }
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true

# Linux-only runtime dependencies. Detached state management compiles on
# all platforms (it's just file I/O + JSON), but the namespace/mount/exec
# code is Linux-only.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "mount", "process", "sched", "signal", "user"] }
libc = "0.2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
